fix spacing issue with sort icon (#5006)

--- a/investigate-events/app/styles/investigate-events/components/_investigate-events-table.scss
+++ b/investigate-events/app/styles/investigate-events/components/_investigate-events-table.scss
@@ -332,6 +332,17 @@
       }
     }
   }
+
+  .rsa-data-table-header-row:last-child {
+    .sortable-item:last-child {
+        h2 {
+          padding-right: 2rem;
+        }
+      .sort-indicator {
+        right: 1.5rem;
+      }
+    }
+  }
 }
 
 .download-dropdown {
